<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.read0r.Activities.ReadSelectActivity" >

    <TextView
        android:id="@+id/main_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ReadSelectTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ListView
        android:id="@+id/main_readsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_linearLayout1"
        android:layout_below="@+id/main_textView1"
        android:layout_centerHorizontal="true" >

    </ListView>

    <LinearLayout
        android:id="@+id/main_linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/main_backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:drawableLeft="@drawable/back"
            android:text="@string/BackBtn" />

        <Button
            android:id="@+id/main_filterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:drawableLeft="@drawable/book"
            android:text="@string/ReadBtn" />
    </LinearLayout>


</RelativeLayout>
